--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Authors@R:
 Description: What the package does (one paragraph).
 Imports:
     ggplot2,
-    tidyr
+    tidyr,
+    dplyr
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
