--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,10 @@ Description: What the package does (one paragraph).
 Imports:
     ggplot2,
     tidyr,
-    dplyr
+    dplyr,
+    magrittr,
+    boot,
+    utils
 License: What license it uses
 Encoding: UTF-8
 LazyData: true
