--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggspider
-Title: What the Package Does (One Line, Title Case)
+Title: Make a Spider or Radar Plot with ggplot2
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "First",
@@ -7,15 +7,18 @@ Authors@R:
            role = c("aut", "cre"),
            email = "first.last@example.com",
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Make a spider or radar plot with ggplot2.
 Imports:
     ggplot2,
     tidyr,
     dplyr,
     magrittr,
-    boot,
-    utils
-License: What license it uses
+    utils,
+    rlang
+Suggests:
+    testthat
+License: GPL (>=2)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Roxygen: list(markdown = TRUE)
