--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(spider_web)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
-importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,geom_path)
@@ -15,6 +15,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_brewer)
 importFrom(ggplot2,theme)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(tidyr,spread)
 importFrom(utils,head)
 importFrom(utils,tail)
